;; Tests of the stdlib Bytes library

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps lin_tests.exe))


;; Linearizability tests utilizing ppx_deriving_qcheck

(executable
 (name lin_tests)
 (modules lin_tests)
 (libraries multicorecheck.lin))
